--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -12,7 +12,7 @@ env:
   MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
 jobs:
     unit-testing: 
-        name: Unit Testing
+        name: Unit Testing 1
         runs-on: ubuntu-latest
         steps:
         - name: Checkout Repository
