--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -9,7 +9,7 @@ on:
     
 jobs:
     unit-testing:
-        name: Unit Testing 1
+        name: Unit Testing 
         runs-on: ubuntu-latest
         steps:
         - name: Checkout Repository
